--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<body>
 	  <div class="container">
 		<div class="row navigation">
-		  <div class="span2 logl">
+		  <div class="span2 logo">
 			Logo
 		  </div>
 		  <div class="span6 blank">
@@ -102,4 +102,3 @@
 		</div>
 	</body>
 </html>
-
