Final for HW4 -- not my best work :-/

--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>DungeonHacker</h1>
         </div>
       </div> 
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Customizable Dice and Avatars for all your gaming needs.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -205,17 +205,11 @@
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+		  	Are you an avid D&D or other board-based RPG player?  Are you
+			sick and tired of the same old boring dice that everyone seems
+			to bring to your games?
+
+			Time to change everything: Enter DungeonHacker
           </p>
         </div>
       </div>
@@ -223,17 +217,11 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+		  	DungeonHacker is a 3D printing service which allows you to create 
+			custom Dungeons and Dragons Dice, right from your home PC.  
+			You don't need a 3D printer, or even 3D design skills to create 
+			unique pieces in a variety of metals, guaranteed to make you the envy
+			of your next session.
           </p>
         </div>
         <div class="span5 asset">
@@ -252,12 +240,15 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+					 How does DungeonHacker work?
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+					DungeonHacker is a WebGL application which allows you to
+				    design, modify and purchase custom dice for role playing.
+				    You can upload an image, start from one of our neat templates,
+				    or upload your own 3D model file for more advanced users.	
                   </div>
                 </div>
               </div>
@@ -265,12 +256,31 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
-                    What's a Frequently Asked Question?
+					 Wait, 3D printing in metal?  I thought that was just plastic?
                   </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+                    3D printing technologies have come a long way from the stereolithographs
+				    of the 1970s.  It's possible today to print in a variety of metals, 
+					including Stainless Steel (with various coatings), brass, silver, gold and
+					titanium. 
+                  </div>
+                </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseThree">
+					 How much does this crazy high-tech cost?
+                  </a>
+                </div>
+                <div id="collapseThree" class="accordion-body collapse">
+                  <div class="accordion-inner">
+					Not nearly as much as you'd think.  Cost will depend on volume of material
+					used to create the dice.  For the budget-concious, you can create just a 
+					single die (usually the d20).  However, if you really want to wow your
+					friends, print the whole set!  Shipping is the same for all dice, regardless
+					of the number produced
                   </div>
                 </div>
               </div>
